Kubernetes_Practical_tasks/7.Ingresses/T4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"trouble-1-ingress","namespace":"default"},"spec":{"rules":[{"host":"trouble-1.k8slab.net","http":{"paths":[{"backend":{"service":{"name":"lime-svc","port":{"number":80}}},"path":"/lime","pathType":"ImplementationSpecific"},{"backend":{"service":{"name":"purple-svc","port":{"number":80}}},"path":"/purple","pathType":"ImplementationSpecific"}]}}]}}
  creationTimestamp: "2026-06-17T12:36:57Z"
  generation: 1
  name: trouble-1-ingress
  namespace: trouble-1
  resourceVersion: "21090"
  uid: 812d4f4c-f537-45c4-bbb2-c3314e12cfb8
spec:
  ingressClassName: nginx
  rules:
    - host: trouble-1.k8slab.net
      http:
        paths:
          - backend:
              service:
                name: lime-svc
                port:
                  number: 8080
            path: /lime
            pathType: ImplementationSpecific
          - backend:
              service:
                name: purple-svc
                port:
                  number: 8080
            path: /purple
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - ip: 192.168.39.181
